--- a/configs/sway/config
+++ b/configs/sway/config
@@ -15,10 +15,8 @@ set $term alacritty
 set $menu rofi -show run
 
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 
-output * bg ~/Pictures/6303-mauritania.jpg fill
+output * bg ~/Pictures/b1ivv4tgg9831.jpg fill
 
 default_border pixel 3
 #smart_gaps on
@@ -38,17 +36,17 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 # Example configuration:
 #
 exec swayidle -w \
-         timeout 300 'swaylock -f -c 000000 -i ~/Pictures/6303-mauritania.jpg' \
+         timeout 300 'swaylock -f -c 000000 -i ~/Pictures/b1ivv4tgg9831.jpg' \
          timeout 305 'swaymsg "output * dpms off"' \
               resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock -f -c 000000 -i ~/Pictures/6303-mauritania.jpg'
+         before-sleep 'swaylock -f -c 000000 -i ~/Pictures/b1ivv4tgg9831.jpg'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 305 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 # Lock screen
-bindsym $mod+m exec swaylock -f -i ~/Pictures/6303-mauritania.jpg
+bindsym $mod+m exec swaylock -f -i ~/Pictures/b1ivv4tgg9831.jpg
 
 #
 # Example configuration:
