Fixed waybar config

--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -86,7 +86,7 @@
     },
     "network": {
         // "interface": "wlp2s0", // (Optional) To force the use of this interface
-        "format-wifi": {ipaddr} ({signalStrength}%) ",
+        "format-wifi": "{ipaddr} ({signalStrength}%) ",
         "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
         "format-disconnected": "Disconnected ",
         "on-click": "swaymsg exec '$term -e nmtui-connect'"
