--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -1,113 +1,124 @@
 {
-    "layer": "top", // Waybar at top layer
-    // "position": "bottom", // Waybar at the bottom of your screen
-    // "height": 30, // Waybar height
-    // "width": 1280, // Waybar width
-    // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode"],
-    // "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "backlight", "battery", "network", "clock", "tray"],
-    // Modules configuration
-    // "sway/workspaces": {
-    //     "disable-scroll": true,
-    //     "all-outputs": true,
-    //     "format": "{name}: {icon}",
-    //     "format-icons": {
-    //         "1": "",
-    //         "2": "",
-    //         "3": "",
-    //         "4": "",
-    //         "5": "",
-    //         "urgent": "",
-    //         "focused": "",
-    //         "default": ""
-    //     }
-    // },
-    "sway/mode": {
-        "format": "{}"
+  "name": "ayu-mirage", /* Options: ayu, ayu-mirage, ayu-dark */
+  "layer": "top",
+  "position": "top",
+  "height": 30,
+  "width": 1920,
+  "modules-left": [
+    "sway/workspaces",
+    "custom/terminal",
+    "custom/editor",
+    "custom/browser",
+    "custom/files",
+    "sway/mode"
+  ],
+  "modules-center": [ "clock" ],
+  "modules-right": [
+    "tray",
+    "idle_inhibitor",
+    "memory",
+    "cpu",
+    "temperature",
+    "pulseaudio",
+    "network",
+    "backlight",
+    "custom/system"
+  ],
+  "custom/separator": {
+    "format": "·",
+    "tooltip": false
+  },
+  "sway/mode": {
+    "format": "<span style=\"italic\">{}</span>"
+  },
+  "tray": {
+    "icon-size": 14,
+    "spacing": 22
+  },
+  "clock": {
+    "format": "{:%a %b %d %H:%M}",
+    "tooltip": false
+  },
+  "custom/system": {
+    "format":"",
+    "on-click": "swaynag -t ayu-mirage -m '' -b 'Exit' 'swaymsg exit' -b 'Reboot' 'swaymsg exec systemctl reboot' -b 'Shut down' 'systemctl poweroff'",
+    "on-click-right": "swaymsg mode System"
+  },
+  "custom/browser": {
+    "format":"",
+    "tooltip": false,
+    "on-click": "firefox"
+  },
+  "custom/files": {
+    "format":"",
+    "tooltip": false,
+    "on-click": "thunar"
+  },
+  "custom/editor": {
+    "format":"",
+    "tooltip": false,
+    "on-click": "code"
+  },
+  "custom/terminal": {
+    "format":"",
+    "tooltip": false,
+    "on-click": "swaymsg scratchpad show",
+    "on-click-right": "alacritty"
+  },
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "tooltip": false,
+    "format-icons": {
+        "activated": "",
+        "deactivated": ""
+    }
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}%",
+    "format-bluetooth": "{icon} ",
+    "format-muted": "",
+    "format-icons": {
+        "headphones": "",
+        "handsfree": "",
+        "headset": "",
+        "phone": "",
+        "portable": "",
+        "car": "",
+        "default": ["", ""]
     },
-    //"sway/window": {
-    //    "max-length": 50
-    //},
-    "tray": {
-        // "icon-size": 21,
-        "spacing": 10
-    },
-    "clock": {
-        "interval": 1,
-        "format": "{:%a %b %d %H:%M:%S}"
-    },
-    "cpu": {
-        "format": "{}% "
-    },
-    "memory": {
-        "format": "{}% "
-    },
-    "battery": {
-        "interval": 2,
-        "states": {
-            "100": 100,
-            "90": 90,
-            "80": 80,
-            "70": 70,
-            "60": 60,
-            "50": 50,
-            "40": 40,
-            "30": 30,
-            "20": 20,
-            "10": 10,
-            "critical": 5
-        },
-        "format": "{capacity}% ",
-        "format-full": "{capacity}% ",
-        "format-discharging-100": "{capacity}% ",
-        "format-discharging-90": "{capacity}% ",
-        "format-discharging-80": "{capacity}% ",
-        "format-discharging-70": "{capacity}% ",
-        "format-discharging-60": "{capacity}% ",
-        "format-discharging-50": "{capacity}% ",
-        "format-discharging-40": "{capacity}% ",
-        "format-discharging-30": "{capacity}% ",
-        "format-discharging-20": "{capacity}% ",
-        "format-discharging-10": "{capacity}% ",
-	"format-discharging-critical": "{capacity}% ",
-        "format-charging-100": "{capacity}% ",
-        "format-charging-90": "{capacity}% ",
-        "format-charging-80": "{capacity}% ",
-        "format-charging-70": "{capacity}% ",
-        "format-charging-60": "{capacity}% ",
-        "format-charging-50": "{capacity}% ",
-        "format-charging-40": "{capacity}% ",
-        "format-charging-30": "{capacity}% ",
-        "format-charging-20": "{capacity}% ",
-        "format-charging-10": "{capacity}% ",
-        "format-charging-critical": "{capacity}% ", 
-        "format-icons": ["", "", "", "", ""]
-    },
-    "network": {
-        // "interface": "wlp2s0", // (Optional) To force the use of this interface
-        "format-wifi": "{ipaddr} ({signalStrength}%) ",
-        "format-ethernet": "{ifname}: {ipaddr}/{cidr} ",
-        "format-disconnected": "Disconnected ",
-        "on-click": "swaymsg exec '$term -e nmtui-connect'"
-    },
-    "pulseaudio": {
-        //"scroll-step": 1,
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}",
-        "format-muted": "",
-        "format-icons": {
-            "headphones": "",
-            "headset": "",
-            "speaker": "",
-            "default": [""]
-        },
-        "on-click": "pavucontrol"
-    },
-   "backlight": {
-        "format": "{percent}% ",
-        "on-scroll-down": "light -A 1",
-        "on-scroll-up": "light -U 1"
+    "scroll-step": 5,
+    "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+    "on-click-right": "pavucontrol",
+    "tooltip": false
+  },
+  "temperature": {
+    "thermal-zone": 2,
+    "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+    "critical-threshold": 80,
+    "format-critical": "{temperatureC}°C ",
+    "format": " {temperatureC}°C"
+  },
+  "cpu": {
+    "tooltip": false,
+    "format": " {}%"
+  },
+  "network": {
+    "format": "{ifname}",
+    "format-wifi": " {essid}",
+    "format-ethernet": " {ifname}",
+    "format-disconnected": "",
+    "tooltip": false,
+    "max-length": 50,
+    "on-click": "swaymsg exec '$term -e nmtui-connect'"
+  },
+  "memory": {
+    "interval": 30,
+    "format": " {used:0.1f}GB",
+    "tooltip": false
+  },
+  "backlight": {
+      "format": "{percent}% ",
+      "on-scroll-down": "light -A 1",
+      "on-scroll-up": "light -U 1"
+  }
 }
-}
-
