--- a/configs/alacritty/alacritty.yml
+++ b/configs/alacritty/alacritty.yml
@@ -103,7 +103,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 10.0
+  size: 14.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -130,40 +130,29 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: true
 
-# Base16 Horizon Dark - alacritty color config
-# Michaël Ball (http://github.com/michael-ball/)
+# Colors (Ayu Mirage)
 colors:
-  # Default colors
   primary:
-    background: '0x1c1e26'
-    foreground: '0xcbced0'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x1c1e26'
-    cursor: '0xcbced0'
-
-  # Normal colors
+    background: '0x212733'
+    foreground: '0xd0cec3'
   normal:
-    black:   '0x1c1e26'
-    red:     '0xe93c58'
-    green:   '0xefaf8e'
-    yellow:  '0xefb993'
-    blue:    '0xdf5273'
-    magenta: '0xb072d1'
-    cyan:    '0x24a8b4'
-    white:   '0xcbced0'
-
-  # Bright colors
+    black:   '0x212733'
+    red:     '0xea5965'
+    green:   '0xade46b'
+    yellow:  '0xfec254'
+    blue:    '0x2d91d0'
+    magenta: '0xc9aeff'
+    cyan:    '0x86e2bf'
+    white:   '0xbbbbbb'
   bright:
-    black:   '0x6f6f70'
-    red:     '0xe58d7d'
-    green:   '0x232530'
-    yellow:  '0x2e303e'
-    blue:    '0x9da0a2'
-    magenta: '0xdcdfe4'
-    cyan:    '0xe4a382'
-    white:   '0xe3e6ee'
+    black:   '0x555555'
+    red:     '0xea5965'
+    green:   '0xc1e436'
+    yellow:  '0xfed96d'
+    blue:    '0x5555ff'
+    magenta: '0xff55ff'
+    cyan:    '0x99ffda'
+    white:   '0xffffff'
 
 draw_bold_text_with_bright_colors: false
 
