--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -7,9 +7,9 @@
   "modules-left": [
     "sway/workspaces",
     "custom/terminal",
-    "custom/editor",
-    "custom/browser",
     "custom/files",
+    "custom/browser",
+    "custom/editor",
     "sway/mode"
   ],
   "modules-center": [ "clock" ],
@@ -44,26 +44,26 @@
     "on-click": "swaynag -t ayu-mirage -m '' -b 'Exit' 'swaymsg exit' -b 'Reboot' 'swaymsg exec systemctl reboot' -b 'Shut down' 'systemctl poweroff'",
     "on-click-right": "swaymsg mode System"
   },
-  "custom/browser": {
-    "format":"",
+  "custom/terminal": {
+    "format":"",
     "tooltip": false,
-    "on-click": "firefox"
+    "on-click": "alacritty",
   },
   "custom/files": {
     "format":"",
     "tooltip": false,
     "on-click": "thunar"
   },
+  "custom/browser": {
+    "format":"",
+    "tooltip": false,
+    "on-click": "firefox"
+  },
+
   "custom/editor": {
     "format":"",
     "tooltip": false,
-    "on-click": "code"
-  },
-  "custom/terminal": {
-    "format":"",
-    "tooltip": false,
-    "on-click": "swaymsg scratchpad show",
-    "on-click-right": "alacritty"
+    "on-click": "code-oss"
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
