--- a/configs/sway/config
+++ b/configs/sway/config
@@ -1,6 +1,6 @@
 ### VARIABLES
 # Font
-set $font SF Pro Text Semibold 10
+set $font MesloLGS NF Regular 10
 
 # Color scheme
 set $colors ayu-mirage
@@ -18,7 +18,7 @@ set $up k
 set $right l
 
 # Terminal + Rofi
-set $term alacritty
+set $term termite
 set $menu rofi -show combi | xargs swaymsg exec
 
 # Background
