--- a/configs/i3blocks/config
+++ b/configs/i3blocks/config
@@ -98,11 +98,11 @@ interval=120
 # Battery indicator
 #
 # The battery instance defaults to 0.
-#[battery]
-#label=BAT
+[battery]
+label=Battery
 #label=⚡
 #instance=1
-#interval=30
+interval=30
 
 # Generic media player support
 #
