--- a/configs/sway/config
+++ b/configs/sway/config
@@ -1,9 +1,9 @@
 ### VARIABLES
 # Font
-set $font San Francisco Pro Regular 10
+set $font Iosevka Nerd Font Regular 10
 
 # Background image
-set $background metalbuilding.jpeg
+set $background Phoenix-dark-grey.png
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
@@ -26,8 +26,8 @@ font pango:$font
 
 # Gaps
 default_border pixel 1
-gaps inner 1
-gaps outer 0
+gaps inner 10
+gaps outer 10
 hide_edge_borders smart
 
 # Brightness control
@@ -44,14 +44,14 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 # your displays after another 305 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec swayidle -w \
-         timeout 300 'swaylock -f -c 000000 -i ~/Pictures/andre-benz-cXU6tNxhub0-unsplash.jpg' \
+         timeout 300 'swaylock -f -c 000000 -i ~/Pictures/$background' \
          timeout 305 'swaymsg "output * dpms off"' \
               resume 'swaymsg "output * dpms on"' \
-         before-sleep 'swaylock -f -c 000000 -i ~/Pictures/andre-benz-cXU6tNxhub0-unsplash.jpg'
+         before-sleep 'swaylock -f -c 000000 -i ~/Pictures/$background'
 
 
 # Lock screen
-bindsym $mod+m exec swaylock -f -i ~/Pictures/andre-benz-cXU6tNxhub0-unsplash.jpg
+bindsym $mod+m exec swaylock -f -i ~/Pictures/$background
 
 # Input configuration
 # You can get the names of your inputs by running: swaymsg -t get_inputs
