--- a/configs/termite/config
+++ b/configs/termite/config
@@ -3,7 +3,7 @@
 #
 
 [options]
-font = Fira Code Retina 10
+font = MesloLGS NF Regular 11
 hyperlinks = true
 cursor_blink = off
 cell_width_scale = 1.3
