--- a/configs/sway/config
+++ b/configs/sway/config
@@ -58,7 +58,7 @@ bindsym $mod+m exec swaylock -f -i ~/Pictures/$background
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-input 2:7:SynPS/2_Synaptics_TouchPad {
+input 1739:30383:CUST0001:00_06CB:76AF_Touchpad {
 	natural_scroll enabled
 	tap enabled
 	#Clickfinger works even if this is enabled
